# ROMA-Contract-Explainer

./: .env.example  .gitignore  README.md
backend/: README.md  agents.py  contract_registry.py  main.py  pyproject.toml  railway.json  railway.toml  requirements.txt  requirements.txt.railway
frontend/: .env.production.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/explain/: route.ts
frontend/app/api/roma-health/: route.ts
frontend/components/: ui.tsx
frontend/lib/: cache.ts  cn.ts  sources.ts
