[project]
name = "roma-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "httpx==0.27.2",
  "python-multipart==0.0.12"
]

[project.optional-dependencies]
roma = [
  "git+https://github.com/sentient-agi/ROMA.git"
]
